Noticed the button used to scroll to the top of the page was still hoverable when invisible. Added code to prevent this.

--- a/client/src/css/site/partials/navigation/_scrollBtn.scss
+++ b/client/src/css/site/partials/navigation/_scrollBtn.scss
@@ -20,11 +20,13 @@ $anim-timing: 3s;
         border: none;
         outline: 0px;
         cursor: pointer;
+        pointer-events: none; 
         opacity: 0;
         z-index: 1000;
         transition: opacity 0.5s ease-in-out, right 0.5s ease-in-out, bottom 0.2s ease-in-out;
 
         &.active {
+            pointer-events: auto;
             right: 1.4rem;        
             opacity: 1;
 
